<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Where is … ?</string>
    <string name="Save">Save Pos.</string>
    <string name="GoTo">Go</string>
    <string name="Parking">Parking</string>
    <string name="rename">Rename</string>
    <string name="hybrid">Hybrid</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="map_not_ready">Map is not ready yet</string>
    <string name="nogps">Your GPS is off, location is not accurate</string>
    <string name="nolocationprovider">Your location is not available, check your connection status</string>
    <string name="ok">Save</string>
    <string name="cancel">Cancel</string>
    <string name="setName">Set new name</string>
    <string name="onFoot">On foot</string>
    <string name="driving">Driving</string>
    <string name="publicTransport">Public Transport</string>
    <string name="choosetravel">Choose travel mode</string>
    <string name="parkingDialog">Parking spot</string>
    <string name="widgetname">Parking Widget</string>
    
        <string name="configuration_text">Where is settings</string>
        <string name="extension_name">Where is ? Smartwatch</string>
        
    <string name="colors">Color</string>
    <string name="FloorParking">Floor</string>
    <string name="NumberParking">Number</string>
    <string name="SectionParking">Section</string> 
    <string name="NotesParking">Notes</string>    
    
    
    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>    
    <string name="purple">Purple</string>
    <string name="pink">Pink</string>
    <string name="brown">Brown</string>       
    
    
    <string name="sharesubject">Where is... ?</string>       
    <string name="sharevia">Share with</string>       
    <string name="sharestring1">I want to share the location of </string>       
    <string name="sharestring2"> with you </string> 
    <string name="sharestring3"> with this app: </string>       
    
    
    
    <string-array name="layers_array">
    <item>@string/normal</item>
    <item>@string/hybrid</item>
    <item>@string/satellite</item>
    <item>@string/terrain</item>
  </string-array>
</resources>